--- a/src/Cms.WebMvc/Views/Shared/Partials/Admin/_LeftSideBar.cshtml
+++ b/src/Cms.WebMvc/Views/Shared/Partials/Admin/_LeftSideBar.cshtml
@@ -23,23 +23,14 @@
         </div><!-- aside-loggedin -->
 
         <ul class="nav nav-aside">
+            <li class="nav-item tx-bold"><a href="/Admin/SiteContent" class="nav-link"><i data-feather="settings"></i> <span>Thông tin Website</span></a></li>
           <li class="nav-item tx-bold"><a href="/Admin/User" class="nav-link"><i data-feather="users"></i> <span>Quản lý User</span></a></li>
           <li class="nav-item tx-bold"><a href="/Admin/Category" class="nav-link"><i data-feather="settings"></i> <span>Quản lý danh mục</span></a></li>
           <li class="nav-item tx-bold"><a href="/Admin/Tag" class="nav-link"><i data-feather="settings"></i> <span>Quản lý Thẻ</span></a></li>
           <br>
           <li class="nav-item tx-bold"><a href="/Admin/Post" class="nav-link"><i data-feather="list"></i> <span>Quản lý Bài viết</span></a></li>
 <br>
-        @*   <li class="nav-label mg-t-5 tx-bold">Category Management</li> *@
-        @*     <li class="nav-item tx-bold"><a href="/Admin/Category/Add" class="nav-link"><i data-feather="list"></i> <span>Thêm mới</span></a></li> *@
-        @*     <li class="nav-item tx-bold"><a href="/Admin/Category" class="nav-link"><i data-feather="list"></i> <span>Danh sách</span></a></li> *@
-        @*    *@
-        @*    *@
-        @* <li class="nav-label mg-t-25 tx-bolder">Post Management</li> *@
-        @*     <li class="nav-item font-weight-bold"><a href="/Admin/Post/Add" class="nav-link"><i data-feather="layers"></i> <span>Thêm mới</span></a></li> *@
-        @*     <li class="nav-item font-weight-bold"><a href="/Admin/Post" class="nav-link"><i data-feather="layers"></i> <span>Danh sách</span></a></li> *@
-          
-
-          @* <li class="nav-label mg-t-25">Settings</li> *@
+        
             
           <li class="nav-item tx-bold"><a href="/Admin/Setting" class="nav-link"><i data-feather="settings"></i> <span>Cấu hình WebSite</span></a></li>
           <li class="nav-item tx-bold"><a href="/Admin/FAQ" class="nav-link"><i data-feather="help-circle"></i> <span>Câu hỏi thường gặp</span></a></li>
