--- a/src/Cms.WebMvc/Views/Shared/Partials/Public/_AboutUs.cshtml
+++ b/src/Cms.WebMvc/Views/Shared/Partials/Public/_AboutUs.cshtml
@@ -15,7 +15,7 @@
         <br>
         <div class="col-md-2 col-sm-3">
             @* <a href="/Home/AboutUs" class="btn-learn-more">Chi tiết</a> *@
-            <a href="/Post/Detail/@aboutUsInfo.DetailSlug" class="btn-learn-more fw-bold">Chi tiết</a>
+            <a href="/SiteContent/Detail/@aboutUsInfo.DetailSlug" class="btn-learn-more fw-bold">Chi tiết</a>
         </div>
 
     </div>
