--- a/src/Cms.WebMvc/Views/Shared/Partials/Public/_Services.cshtml
+++ b/src/Cms.WebMvc/Views/Shared/Partials/Public/_Services.cshtml
@@ -15,7 +15,7 @@
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-4" data-aos="zoom-in" data-aos-delay="400">
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-trip"></i></div>
-                <h4><a href="/Post/Detail/@item.DetailSlug">@item.Title</a></h4>
+                <h4><a href="/SiteContent/Detail/@item.DetailSlug">@item.Title</a></h4>
                 @Html.Raw(item.Content)
               </div>
             </div>
