--- a/src/Cms.WebMvc/_ViewImports.cshtml
+++ b/src/Cms.WebMvc/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 
 @using Cms.Application.Public.Models
 @using Cms.Application.Admin.Models.Post
+@using Cms.Infrastructure.Persistence.Entities
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
