--- a/src/Cms.WebMvc/Areas/Admin/Views/Post/Edit.cshtml
+++ b/src/Cms.WebMvc/Areas/Admin/Views/Post/Edit.cshtml
@@ -8,6 +8,7 @@
 <div class="container-fluid">
     <h4 class="tx-bold">Chỉnh sửa bài viết</h4>
     <form method="post" enctype="multipart/form-data">
+        <input asp-for="PostId" type="hidden">
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label class="tx-bold"  asp-for="Title"></label>
@@ -24,8 +25,9 @@
                 <label asp-for="PostImg" class="tx-bold"></label>
                 <input type="file" class="form-control-file" asp-for="PostImg" onchange="previewImageUpload(this)">
             </div>
-            <div class="form-group col-md-4">
-                <img id="preview-img" src="~/assets/img/no-image-icon.png" alt="previewImage" style="max-width:100%" />
+            <div class="form-group col-md-4">         
+               @*  <img id="preview-img" src="~/assets/img/no-image-icon.png" alt="previewImage" style="max-width:100%" /> *@
+                <img id="preview-img" src="@Model.PostImgUrl" alt="previewImage" style="max-width:100%" />
             </div>
         </div>
         
