--- a/src/Cms.WebMvc/Views/Shared/_PostDetailLayout.cshtml
+++ b/src/Cms.WebMvc/Views/Shared/_PostDetailLayout.cshtml
@@ -16,6 +16,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik Bubbles" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nosifer" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="~/assets/arsha/vendor/aos/aos.css" rel="stylesheet">
@@ -45,8 +47,8 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center">
       <a href="/" class="logo me-auto">
-        <img src="~/contents/cms/tham-tu-logo.png" alt="" class="img-fluid">
-        <span class="fw-bolder" id="logo-name">THÁM TỬ TƯ</span>
+        <img src="~/contents/@ViewData["LogoImageUrl"]" alt="" class="img-fluid">
+        <span class="fw-bolder" id="logo-name">@ViewData["SiteName"]</span>
       </a>
       
       @* <h1 class="logo me-auto"><a href="index.html">Arsha</a></h1> *@
