--- a/src/Cms.WebMvc/Views/Shared/_AuthLayout.cshtml
+++ b/src/Cms.WebMvc/Views/Shared/_AuthLayout.cshtml
@@ -16,7 +16,7 @@
         <div class="mx-wd-300 wd-sm-450 ht-100p d-flex flex-column align-items-center justify-content-center">
             @* <img class="w-100" src="/assets/img/hdf-logo.png" alt="Alternate Text" /> *@
                 
-            <h2 class="text-danger font-weight-bold mg-t-6">DETECTIVE SYSTEM</h2>
+            <h2 class="text-danger font-weight-bold mg-t-6">THÁM TỬ DAILY</h2>
 
             @RenderBody()
         </div>
@@ -25,7 +25,7 @@
 
 <footer class="footer">
     <div>
-        <span>&copy; 2023 Tham tu tu v1.0.0. </span>
+        <span>&copy; 2023 Tham tu daily v1.0.0. </span>
         <span>Created by: Kitaro</span>
     </div>
     <div>
