--- a/src/Cms.WebMvc/_ViewImports.cshtml
+++ b/src/Cms.WebMvc/_ViewImports.cshtml
@@ -3,6 +3,9 @@
 
 @using Cms.Application.Public.Models
 @using Cms.Application.Admin.Models.Post
+@using Cms.Application.Admin.Models.User
+
+
 @using Cms.Infrastructure.Persistence.Entities
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
