--- a/src/Cms.WebMvc/Areas/Admin/Views/Category/Add.cshtml
+++ b/src/Cms.WebMvc/Areas/Admin/Views/Category/Add.cshtml
@@ -4,9 +4,10 @@
     
 }
 
-<div class="container">
-    <h4>Thêm danh mục</h4>
+
     <form method="post">
+        <h4>Thêm danh mục</h4>
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="Id">
         <div class="form-row">
             <div class="form-group col-md-4">
@@ -27,5 +28,3 @@
         
 
     </form>
-    <!-- /.row-->
-</div>
