--- a/src/Cms.WebMvc/Areas/Admin/Views/FAQ/Edit.cshtml
+++ b/src/Cms.WebMvc/Areas/Admin/Views/FAQ/Edit.cshtml
@@ -4,10 +4,10 @@
     
 }
 
-<div class="container">
     <h4>Chỉnh sửa Câu hỏi thường gặp</h4>
     <form method="post">
         <input type="hidden" asp-for="Id">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label class="tx-bold"  asp-for="Question">Câu hỏi:</label>
@@ -31,5 +31,3 @@
         
 
     </form>
-    <!-- /.row-->
-</div>
