--- a/src/Cms.WebMvc/Areas/Admin/Views/FAQ/Index.cshtml
+++ b/src/Cms.WebMvc/Areas/Admin/Views/FAQ/Index.cshtml
@@ -4,14 +4,13 @@
     
 }
 
-<div class="container">
     <h4>Quản lý Câu hỏi thường gặp</h4>
     <div class="row">
         <div class="table-responsive">
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col"><a href="/Admin/FAQ/Add" class="text-primary"><i data-feather="plus-circle"></i></a></th>
+                    <th scope="col" style="min-width: 100px;"><a href="/Admin/FAQ/Add" class="text-primary"><i data-feather="plus-circle"></i> Thêm</a></th>
                     <th scope="col">Câu hỏi</th>
                     <th scope="col">Trả lời</th>
                 </tr>
@@ -21,7 +20,9 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td><a class="text-primary" href="/Admin/FAQ/Edit/@item.Id"><i data-feather="edit"></i></a> <a class="text-danger" href="/Admin/FAQ/Delete/@item.Id"> <i data-feather="delete"></i></a></td>
+                        <td>
+                            <a class="text-primary" href="/Admin/FAQ/Edit/@item.Id"><i data-feather="edit"></i> Sửa</a> 
+                            <a class="text-danger" href="/Admin/FAQ/Delete/@item.Id"> <i data-feather="delete"></i></a> Xoá</td>
                         <td>@item.Question</td>
                         <td>@item.Answer.Substring(0, Math.Min(@item.Answer.Length, 100)) ...</td>
                     </tr>
@@ -34,5 +35,3 @@
         </div>
 
     </div>
-    <!-- /.row-->
-</div>
