--- a/src/Cms.WebMvc/Areas/Admin/Views/Post/Edit.cshtml
+++ b/src/Cms.WebMvc/Areas/Admin/Views/Post/Edit.cshtml
@@ -5,9 +5,9 @@
     Layout = "_AdminLayout";
 }
 
-<div class="container-fluid">
     <h4 class="tx-bold">Chỉnh sửa bài viết</h4>
     <form method="post" enctype="multipart/form-data">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input asp-for="PostId" type="hidden">
         <div class="form-row">
             <div class="form-group col-md-4">
@@ -95,9 +95,6 @@
     </form>
 
     
-    <!-- /.row-->
-</div>
-
 @section Scripts {
 
     <script>
