--- a/src/Cms.WebMvc/Areas/Admin/Views/SiteContent/Add.cshtml
+++ b/src/Cms.WebMvc/Areas/Admin/Views/SiteContent/Add.cshtml
@@ -5,9 +5,9 @@
     Layout = "_AdminLayout";
 }
 
-    <form method="post">
-        <h4 class="tx-bold">Chỉnh sửa Nội dung Website</h4>
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<div class="container-fluid">
+    <h4 class="tx-bold">Thêm Service cho Website</h4>
+    <form method="post" enctype="multipart/form-data">
         <input asp-for="Id" type="hidden" class="form-control">
         <div class="form-row">
             <div class="form-group col-md-4">
@@ -17,10 +17,6 @@
             <div class="form-group col-md-4">
                 <label class="tx-bold" asp-for="Slug"></label>
                 <input asp-for="Slug" class="form-control" readonly>
-            </div>
-            <div class="form-group col-md-2">
-                <label class="tx-bold" asp-for="ContentType"></label>
-                <input asp-for="ContentType" class="form-control" readonly>
             </div>
         </div>
         
@@ -48,6 +44,10 @@
 
 
     </form>
+
+    
+    <!-- /.row-->
+</div>
 
 @section Scripts {
 
