--- a/src/Cms.WebMvc/Areas/Admin/Views/Tag/Edit.cshtml
+++ b/src/Cms.WebMvc/Areas/Admin/Views/Tag/Edit.cshtml
@@ -4,9 +4,9 @@
     
 }
 
-<div class="container">
     <h4>Chỉnh sửa Thẻ</h4>
     <form method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="Id">
         <div class="form-row">
             <div class="form-group col-md-4">
@@ -27,5 +27,3 @@
         
 
     </form>
-    <!-- /.row-->
-</div>
