--- a/src/Cms.WebMvc/Areas/Admin/Views/Tag/Index.cshtml
+++ b/src/Cms.WebMvc/Areas/Admin/Views/Tag/Index.cshtml
@@ -4,7 +4,6 @@
     
 }
 
-<div class="container">
     <h4>Quản lý thẻ</h4>
     <div class="row">
 
@@ -12,7 +11,7 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col"><a href="/Admin/Tag/Add" class="text-primary"><i data-feather="plus-circle"></i></a></th>
+                    <th scope="col"><a href="/Admin/Tag/Add" class="text-primary"><i data-feather="plus-circle"></i> Thêm</a></th>
                     <th scope="col">Title</th>
                     <th scope="col">Slug</th>
                 </tr>
@@ -22,7 +21,10 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td><a class="text-primary" href="/Admin/Tag/Edit/@item.Id"><i data-feather="edit"></i></a> <a class="text-danger" href="/Admin/Tag/Delete/@item.Id"> <i data-feather="delete"></i></a></td>
+                        <td>
+                            <a class="text-primary" href="/Admin/Tag/Edit/@item.Id"><i data-feather="edit"></i> Sửa</a> 
+                            <a class="text-danger" href="/Admin/Tag/Delete/@item.Id"> <i data-feather="delete"></i> Xoá</a>
+                        </td>
                         <td>@item.Title</td>
                         <td>@item.Slug</td>
                     </tr>
@@ -35,5 +37,3 @@
         </div>
 
     </div>
-    <!-- /.row-->
-</div>
