--- a/src/Cms.WebMvc/Areas/Admin/Views/User/Index.cshtml
+++ b/src/Cms.WebMvc/Areas/Admin/Views/User/Index.cshtml
@@ -10,7 +10,7 @@
     <table id="admin-users" class="table" style="width:100%">
         <thead>
         <tr>
-            <th><a href="/Admin/User/Add" class="text-primary"><i data-feather="plus-circle"></i> Thêm mới</a></th>
+            <th><a href="/Admin/User/Add" class="text-primary"><i data-feather="plus-circle"></i> Thêm user</a></th>
             <th class="pr-4">Username</th>
             <th class="pr-4">Fullname</th>
 
@@ -21,8 +21,8 @@
         {
             <tr>
                 <td>
-                    <a class="text-primary" href="/Admin/User/Edit/@item.Id"><i data-feather="edit"></i> Chỉnh sửa</a>
-                    <a class="text-primary" href="/Admin/User/ResetPassword/@item.Id"><i data-feather="refresh-cw"></i> Đặt lại mật khẩu</a>
+                    <a class="text-primary" href="/Admin/User/Edit/@item.Id"><i data-feather="edit"></i> Sửa</a>
+                    @* <a class="text-primary" href="/Admin/User/ResetPassword/@item.Id"><i data-feather="refresh-cw"></i> Đặt lại mật khẩu</a> *@
                     <a class="text-danger" href="/Admin/User/Delete/@item.Id"> <i data-feather="delete"></i> Xoá</a>
                 </td>
                 <td>@item.Username</td>
