--- a/src/Cms.WebMvc/Views/Shared/Partials/Public/_Header.cshtml
+++ b/src/Cms.WebMvc/Views/Shared/Partials/Public/_Header.cshtml
@@ -5,21 +5,30 @@
     <a href="/" class="logo me-auto">
         <img src="~/contents/@ViewData["LogoImageUrl"]" alt="" class="img-fluid">
         <span class="fw-bolder" id="logo-name">@ViewData["SiteName"]</span>
+        
     </a>
+
+    @* <a href="#" class="me-auto">Phone: @ViewData["HQPhone"]</a> *@
     
     <nav id="navbar" class="navbar">
         <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Trang chủ</a></li>
+            @* <li><a class="nav-link" href="tel:@ViewData["HQPhone"]">Phone: @ViewData["HQPhone"]</a></li> *@
+            @* <li><a class="nav-link" href="http://zalo.me/@ViewData["HQPhone"]">Zalo: @ViewData["HQPhone"]</a></li> *@
+            
+            <li><a class="nav-link scrollto" href="#hero">Trang chủ</a></li>
             <li><a class="nav-link scrollto" href="#about">Giới thiệu</a></li>
             <li><a class="nav-link scrollto" href="#services">Dịch vụ</a></li>
-           
+
             <li><a class="nav-link scrollto" href="#team">Thông tin thám tử</a></li>
-            
+
             <li><a class="nav-link scrollto" href="#contact">Liên hệ</a></li>
             @* <li><a class="getstarted scrollto" href="#contact">Get Started</a></li> *@
             <li><a class="getstarted" href="/Admin/Dashboard">For Admin</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
+    
+   
+    
 
 </div>
