--- a/src/Cms.WebMvc/Views/Shared/Partials/Public/_Hero.cshtml
+++ b/src/Cms.WebMvc/Views/Shared/Partials/Public/_Hero.cshtml
@@ -6,9 +6,10 @@
             <h4>Với kiến thức sâu rộng luôn được cập nhật và học hỏi, cùng với các kĩ năng thực thụ của một thám tử tư, chúng tôi đã giúp đỡ cho nhiều khách hàng với độ tin cậy tuyệt đối. 
                 Chúng tôi luôn là nơi để khách hàng tìm tới khi cần giải quyết vấn đề mà mình không thể giải quyết một mình được.</h4>
             <div class="d-flex justify-content-center justify-content-lg-start">
-                <a href="#about" class="btn-get-started scrollto">Get Started</a>
+                <a href="#about" class="btn-get-started scrollto">Liên hệ</a>
                 <a href="https://youtu.be/XQ2miixIu30?si=vKFUmUrM8RGBB9gl" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
             </div>
+            <br>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
             <img src="~/assets/arsha/img/hero-img.png" class="img-fluid animated" alt="">
