--- a/src/Cms.WebMvc/Views/Shared/_AdminLayout.cshtml
+++ b/src/Cms.WebMvc/Views/Shared/_AdminLayout.cshtml
@@ -37,6 +37,8 @@
     <!-- Kendo-UI CSS -->
     <link rel="stylesheet" href="~/lib/kendo-ui/styles/bootstrap-main.css">
     
+    <link rel="stylesheet" href="~/css/admin-layout.css">
+    
     @await RenderSectionAsync("Styles", required: false)
   </head>
   <body>
